Spy exp gain reduced & some loc improvements
Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/bftb_ideas_l_english.yml
+++ b/bicemodded/localisation/english/bftb_ideas_l_english.yml
@@ -527,17 +527,17 @@
  TUR_ottoman_officers_invited_back:0 "The §YOttoman Loyalists§! have been invited to return to active service."
 
 
- BUL_army_restrictions:0 "Army Restrictions"
+ BUL_army_restrictions:0 "§RArmy Restrictions§!"
  BUL_army_restrictions_desc:0 "Another consequence of the Treaty of Neuilly-sur-Seine are the severe restrictions imposed on our army, not only do they prohibit compulsory military service, limit the amount of troops and officers in our forces and prevent us from maintaining any advanced equipment, they also prohibit any military maneuvers or campaign planning and even stipulate the number of rifles we can use."
  BUL_army_restrictions_mobilization_law_tt:1 "§RCannot increase conscription law or declare wars.\nCannot train units, disband units, or edit unit templates.\nCannot produce armor, aircraft or ships§!."
- BUL_second_national_catastrophe:0 "Second National Catastrophe"
+ BUL_second_national_catastrophe:0 "§RSecond National Catastrophe§!"
  BUL_second_national_catastrophe_desc:0 "Following our defeat in the Great War, the Treaty of Neuilly-sur-Seine forced us to cede vast territories that now belong to Yugoslavia, Greece, and Romania, and until recently the League of Nations required us to prioritize the payment of large sums of war reparations, crippling our economy and inevitably increasing the debt of our country. The national spirit has never really recovered from this blow, so it is no wonder why this treaty is popularly known in Bulgaria as the Second National Catastrophe..."
  BUL_second_national_catastrophe_tt:0 "Will be removed if Greater Bulgaria is restored:\nHas full control of §YSofia§!, §YPlovdiv§!, §YMoesia§!, §YBurgas§!, §YSouthern Serbia§!, §YMacedonia§!, §YCentral Macedonia§!, §YThrace§!, §YDobrudja§!."
- BUL_imro_01:0 "IMRO"
+ BUL_imro_01:0 "§RIMRO§!"
  BUL_imro_01_desc:0 "The constant fratricidal crimes committed by the Internal Macedonian Revolutionary Organization have seriously damaged our international relations and led in 1934 to the military crackdown of the IMRO stronghold in Petrich, dealing a critical blow to the organization and forcing most of their leaders to flee abroad. However, some revolutionary cells are still active in Bulgaria, and most of our diplomatic relations remain in a poor state."
- BUL_imro_02:0 "IMRO"
+ BUL_imro_02:0 "§OIMRO§!"
  BUL_imro_02_desc:0 "The constant fratricidal crimes committed by the Internal Macedonian Revolutionary Organization have seriously damaged our international relations for far too long, but at least now the foreign powers are finally acknowledging our efforts to destroy the organization for the sake of maintaining peace in the Balkans."
- BUL_imro_04:0 "IMRO"
+ BUL_imro_04:0 "§OIMRO§!"
  BUL_imro_04_desc:0 "Our cooperation with the Internal Macedonian Revolutionary Organization has been widely criticized not only by our neighbors, but also by multiple foreign powers and even by some sectors of our population."
  BUL_tsar_boris_positive_01:0 "Tsar Boris III"
  BUL_tsar_boris_positive_01_desc:0 "Boris's policies have proven to be very beneficial for Bulgaria and for this reason the Tsar enjoys a very good popular opinion not only within the elites and the most privileged circles, but also among the most humble classes."
@@ -545,7 +545,7 @@
  BUL_tsar_boris_negative_01_desc:0 "Boris III knows that his dictatorial regime is coming to an end and, unsurprisingly, he refuses to accept any changes proposed by our ministers, appealing to loyalist members in the government to derail all of our proposals and desperately trying to keep control of Bulgarian politics for as long as he can."
  BUL_zveno_ns:0 "Zveno"
  BUL_zveno_ns_desc:0 "The dissolution of the Military Union was a necessary matter, but it has had its consequences: we finally got rid of several Zveno individuals who were doing nothing more than hindering the chain of command, but we also lost valuable instructors and experienced officers at our military academies."
- BUL_fatherland_front_positive:0 "The Fatherland Front"
+ BUL_fatherland_front_positive:0 "§RThe Fatherland Front§!"
  BUL_fatherland_front_positive_desc:1 "Originally established by the Bulgarian Workers' Party as a political resistance movement to confront oppression and fascism in Bulgaria, the Fatherland Front is now made up of members from multiple organizations, united against all those who seek to subdue the Bulgarian proletariat."
  BUL_fatherland_front_negative_desc:0 "The Fatherland Front is a political resistance movement originally established by the communist Bulgarian Workers Party, but that now includes multiple groups and organizations with widely contrasting ideologies, united against the pro-German military dictatorship in Bulgaria."
  BUL_paramilitary_organizations:0 "Paramilitary Organizations"
