--- a/bicemodded/localisation/english/factions_l_english.yml
+++ b/bicemodded/localisation/english/factions_l_english.yml
@@ -10,7 +10,7 @@
  the_berlin_moscow_axis:0 "The Berlin-Moscow Axis"
  domination_francaise:0 "Domination Française"
  french_entente_alliance:0 "French-Entente Alliance"
- daitoa_kyoeiken:0 "Daitoa Kyoeiken"
+ daitoa_kyoeiken:0 "Dai Tōa Kyōeiken"
  italy_empire_faction:0 "Novum Imperium Romanum"
  chinese_united_front:0 "Chinese United Front"
  miedzymorze_faction:0 "Międzymorze"
