--- a/bicemodded/localisation/english/wtt_ideas_l_english.yml
+++ b/bicemodded/localisation/english/wtt_ideas_l_english.yml
@@ -102,16 +102,17 @@
  PRC_War_of_Liberation:0 "War of Liberation"
  PRC_lacking_officers:1 "Lacking Officers"
  PRC_lacking_officers_desc:0 ""
- PRC_the_long_march:1 "Aftermath of the Long March"
+ PRC_the_long_march:1 "§RAftermath of the Long March§!"
  PRC_the_long_march_desc:0 "The long retreat into Shanxi has depleted our forces, and the Yan'an Base Area is not yet ready to support a major uprising. It will take time or outside help to recover."
- PRC_the_long_march_2:0 "Recovery from the Long March"
- PRC_low_popular_support:0 "Low Popular Support"
+ PRC_the_long_march_2:0 "§ORecovery from the Long March§!"
+ PRC_the_long_march_2_desc:0 "Now that we have established ourselves in our new base and have begun implementing our economic reform policies there, the recovery from our Long March is well under way."
+ PRC_low_popular_support:0 "§8Low Popular Support§!"
  PRC_low_popular_support_desc:0 "The peasants have suffered hard in the civil war. If we want to become accepted as the legitimate government of China, we must win their support."
- PRC_low_popular_support_1:0 "Low Popular Support I"
+ PRC_low_popular_support_1:0 "§9Low Popular Support I§!"
  PRC_low_popular_support_1_desc:0 "The peasants have suffered hard in the civil war. If we want to become accepted as the legitimate government of China, we must win their support."
- PRC_low_popular_support_2:0 "Low Popular Support II"
+ PRC_low_popular_support_2:0 "§OLow Popular Support II§!"
  PRC_low_popular_support_2_desc:0 "The peasants have suffered hard in the civil war. If we want to become accepted as the legitimate government of China, we must win their support."
- PRC_low_popular_support_3:0 "Low Popular Support III"
+ PRC_low_popular_support_3:0 "§RLow Popular Support III§!"
  PRC_low_popular_support_3_desc:0 "The peasants have suffered hard in the civil war. If we want to become accepted as the legitimate government of China, we must win their support."
  PRC_power_struggles:0 "Power Struggles"
  PRC_power_struggles_desc:0 "The party is internally divided about the best way to proceed. Struggles between various factions have erupted and will continue until one of them reigns supreme."
@@ -144,8 +145,8 @@
  JAP_interservice_rivalry_army_dominant:0 "§9Interservice Rivalry - Army Dominant§!"
  JAP_interservice_rivalry_army_strengthened:0 "§8Interservice Rivalry - Army Strengthened§!"
  JAP_interservice_rivalry_balanced:0 "§YInterservice Rivalry - Balanced§!"
- JAP_interservice_rivalry_navy_strengthened:0 "§2Interservice Rivalry - Navy Strengthened§!"
- JAP_interservice_rivalry_navy_dominant:0 "§3Interservice Rivalry - Navy Dominant§!"
+ JAP_interservice_rivalry_navy_strengthened:0 "§3Interservice Rivalry - Navy Strengthened§!"
+ JAP_interservice_rivalry_navy_dominant:0 "§2Interservice Rivalry - Navy Dominant§!"
  JAP_superior_will:0 "Superior Will"
  JAP_unsanctioned_war:0 "Unsanctioned War"
  JAP_unsanctioned_war_desc:0 "The current war in China was started hurriedly, and without the sanction of the Emperor."
@@ -157,13 +158,13 @@
  PRC_soviet_tribute:0 "Soviet Tribute"
  MAN_low_legitimacy_5:0 "§RNo Legitimacy§!"
  MAN_low_legitimacy_4:0 "§OExtremely Low Legitimacy§!"
- MAN_low_legitimacy_3:0 "§YLow Legitimacy§!"
- MAN_low_legitimacy_2:0 "§8Some Legitimacy§!"
+ MAN_low_legitimacy_3:0 "§8Low Legitimacy§!"
+ MAN_low_legitimacy_2:0 "§YSome Legitimacy§!"
  MAN_low_legitimacy_1:0 "§GGrowing Legitimacy§!"
  MAN_low_legitimacy_5_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§RCurrently we are barely seen as a state existing separately from [JAP.GetNameDef].§!"
  MAN_low_legitimacy_4_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§OOur state is getting minimal recognition.§!"
- MAN_low_legitimacy_3_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§YOur standing internationally and amongst the peoples we rule is slowly growing.§!"
- MAN_low_legitimacy_2_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§8Minor acceptance of [ROOT.GetNameDef].§!"
+ MAN_low_legitimacy_3_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§8Our standing internationally and amongst the peoples we rule is slowly growing.§!"
+ MAN_low_legitimacy_2_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§YMinor acceptance of [ROOT.GetNameDef].§!"
  MAN_low_legitimacy_1_desc:0 "Emperor Puyi is the legitimate descendent of the Qing emperors who ruled China for three hundred years. The Xinhai Revolution which deposed him in 1911 was very popular, as the late Qing government was powerless against both the foreigners stealing Chinese land and the regional governors establishing themselves as warlords. Emperor Puyi's installation by Japan as Emperor of Manchukuo is not yet accepted by the Manchurian populace, let alone the rest of China.\n\n§GGrowing recognition of our destined role in China and the world.§!"
  MAN_banditry:0 "Banditry"
  MAN_banditry_desc:0 "We are engaged in low-intensity warfare with partisans, defectors and republican terrorists. We should focus on pacifying the countryside in order to hunt these bandits down."
