random fixes and icons

--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2295,6 +2295,7 @@
  britain.9.t:0 "Chamberlain Resigns"
  britain.9.d:0 "With the war developing to the detriment of us and our allies, the Prime Minister has come under fire for both his peacetime and wartime decisions at critical junctions. At a moment when Britain needs to stand united more than ever, it finds itself divided as portions of the parliament holds Chamberlain in contempt.\n\nLacking vital support from Labour, the Prime Minister has made the decision to resign, favoring Lord Halifax as his replacement. However, Halifax has been skeptical and Chamberlain has advised the King to call on Winston Churchill. Churchill, who has long warned of the war that is now upon us, is believed to be capable leading us through it."
  britain.9.a:0 "We shall never surrender."
+ britain.9.b:0 "Halifax will lead us"
  britain.10.t:0 "Chamberlain Passes Away"
  britain.10.d:0 "Prime Minister Neville Chamberlain has fallen ill recently, despite previously generally having been healthy for his age. After being diagnosed with bowel cancer, increased pain and lost sleep has led him to resign from his post. Chamberlain still enjoys strong popular support and steps down only as a last resort, realizing he will not live to return to work.\n\nThe question remains who will take up the torch after this great statesman and lead Britain through the dark times that may still lie ahead of us."
  britain.10.a:0 "Winston Churchill is who the Empire needs."
