Revert SPA recovery debuffs & Loc improvements
Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -3113,9 +3113,9 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  JAP_army_primancy_focus_bypass_tt:0 "Not enough building slots for §YMilitary Factories§! in home area."
  jap_sia_love:0 "Japanese-Siamese Diplomacy"
  jap_sia_love_desc:0 "Japan has focused its diplomatic efforts on improving relations with Siam."
- JAP_colonial_focus_1:0 "Dai Tōa Investments in the Philippines"
+ JAP_colonial_focus_1:0 "Dai Tôa Investments in the Philippines"
  JAP_colonial_focus_1_desc:0 "The Greater East Asian Co-Prosperity Sphere ('Dai Tōa Kyōeiken') truly fosters growth and solidarity between the peoples of Asia. The ongoing development of the Philipines, led by the Ministry of Greater East Asia, is but one of the many clear demonstrations of this.\nOnly with the expulsion of the decadent United States has this been made possible."
- JAP_colonial_focus_2:0 "Dai Tōa Investments in Indochina"
+ JAP_colonial_focus_2:0 "Dai Tôa Investments in Indochina"
  JAP_colonial_focus_2_desc:0 "Finally our project of the Greater East Asian Co-Prosperity Sphere ('Dai Tōa Kyōeiken') is becoming a reality as we drive out the old imperialist giants.\nThe development of the long neglected Indochinese region can now really take off. Even more than the propagandadised value of this for the locals, it will benefit Japan."
  navy_primancy_focus:0 "Navy primacy"
  JAP_navy_primancy_focus_bypass_tt:0 "Not enough building slots for §YNaval Dockyards§! in home area."
