--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -3707,21 +3707,21 @@
  rock_island_arsenal_idea_desc:0 " "
  american_influence_defence_democratic:0 "US Influence"
  american_influence_drift_democratic:0 "US Influence"
- american_protection_drift_democratic:0 "Under US Protection"
+ american_protection_drift_democratic:0 "§BUnder US Protection§!"
  american_protection_drift_democratic_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
- american_protection_defence_democratic:0 "Under US Protection"
+ american_protection_defence_democratic:0 "§BUnder US Protection§!"
  american_protection_defence_democratic_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
  american_influence_defence_communism:0 "US Influence"
  american_influence_drift_communism:0 "US Influence"
- american_protection_drift_communism:0 "Under US Protection"
+ american_protection_drift_communism:0 "§BUnder US Protection§!"
  american_protection_drift_communism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
- american_protection_defence_communism:0 "Under US Protection"
+ american_protection_defence_communism:0 "§BUnder US Protection§!"
  american_protection_defence_communism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
  american_influence_defence_fascism:0 "US Influence"
  american_influence_drift_fascism:0 "US Influence"
- american_protection_drift_fascism:0 "Under US Protection"
+ american_protection_drift_fascism:0 "§BUnder US Protection§!"
  american_protection_drift_fascism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
- american_protection_defence_fascism:0 "Under US Protection"
+ american_protection_defence_fascism:0 "§BUnder US Protection§!"
  american_protection_defence_fascism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
  USA_based_mils_tt:0 "The Amount of §GEquipment§! that §YUSSR§! will receive is based on the Military Factory count. Use it to your full §Yadvantage§!!\n"
  USA_history_of_segregation_2:0 "History of Segregation"
