--- a/bicemodded/localisation/english/wtt_ideas_l_english.yml
+++ b/bicemodded/localisation/english/wtt_ideas_l_english.yml
@@ -15,9 +15,9 @@
  CHI_hyper_inflation_none_desc:0 "The economy is showing no signs of trouble."
  CHI_hyper_inflation_1:0 "§GLow Inflation§!"
  CHI_hyper_inflation_1_desc:0 "Our economists have noticed a slight increase in inflation. We should keep an eye on that."
- CHI_hyper_inflation_2:0 "§8Moderate Inflation§!"
+ CHI_hyper_inflation_2:0 "§YModerate Inflation§!"
  CHI_hyper_inflation_2_desc:0 "Inflation has started to affect the economy significantly. We should consider counter-measures before things get out of hand."
- CHI_hyper_inflation_3:0 "§YHeavy Inflation§!"
+ CHI_hyper_inflation_3:0 "§8Heavy Inflation§!"
  CHI_hyper_inflation_3_desc:0 "Government-issued money is worth less and less, purchasing power is dropping and some goods are only available to people with the right connections."
  CHI_hyper_inflation_4:0 "§OHyper Inflation§!"
  CHI_hyper_inflation_4_desc:0 "The value of our currency is evaporating. Prices rise dramatically from day to day. We must very urgently take counter-measures before we suffer a complete collapse."
@@ -78,10 +78,10 @@
  
  PRC_five_year_plans_of_China:0 "Five Year Plan"
  PRC_soviet_advisor:0 "Soviet Advisors"
- PRC_no_skilled_personnel_1:0 "No Skilled Personnel:Very High"
- PRC_no_skilled_personnel_2:0 "No Skilled Personnel:High"
- PRC_no_skilled_personnel_3:0 "No Skilled Personnel:Medium"
- PRC_no_skilled_personnel_4:0 "No Skilled Personnel:Low"
+ PRC_no_skilled_personnel_1:0 "§RNo Skilled Personnel:Very High§!"
+ PRC_no_skilled_personnel_2:0 "§ONo Skilled Personnel:High§!"
+ PRC_no_skilled_personnel_3:0 "§8No Skilled Personnel:Medium§!"
+ PRC_no_skilled_personnel_4:0 "§YNo Skilled Personnel:Low§!"
  PRC_no_skilled_personnel_1_desc:0 "Many of our comrades had died during the Long March, causing a lack of skilled personnel among our ranks. This will be difficult for us to gain any kind of technological improvements."
  PRC_no_skilled_personnel_2_desc:0 "Many of our comrades had died during the Long March, causing a lack of skilled personnel among our ranks. This will be difficult for us to gain any kind of technological improvements."
  PRC_no_skilled_personnel_3_desc:0 "Many of our comrades had died during the Long March, causing a lack of skilled personnel among our ranks. This will be difficult for us to gain any kind of technological improvements."
