--- a/bicemodded/localisation/english/decisions_l_english.yml
+++ b/bicemodded/localisation/english/decisions_l_english.yml
@@ -43,6 +43,21 @@
  cp_cost15:0 "£command_power §Y15§!"
  cp_cost15_blocked:0 "£command_power §Y15§!"
  
+ officer_purges:0 "Reorganization of the Military"
+ officer_purges2:0 "Reorganization of the Military"
+ officer_purges3:0 "Reorganization of the Military"
+ officer_purges4:0 "Reorganization of the Military"
+ officer_purges5:0 "Reorganization of the Military"
+ officer_purges6:0 "Reorganization of the Military"
+ officer_purges7:0 "Reorganization of the Military"
+ officer_purges8:0 "Reorganization of the Military"
+ officer_purges9:0 "Reorganization of the Military"
+ officer_purges10:0 "Reorganization of the Military"
+ poland_war_soviet:0 "Takeover of Poland"
+ remove_general_vasily:0 "Kills §YVasily Blyukher§!"
+ purge_dd:0 "Completed the §YTrial of Generals§!"
+ 
+ 
  EAI_diplomacy_ignore_borders_DECISION:0 "Deny Allied Troops On Our Fronts"
  EAI_diplomacy_ignore_borders_DECISION_desc:0 "Instructs your AI controlled allies to avoid sending troops to borders controlled by you."
  EAI_diplomacy_cancel_ignore_borders_DECISION:0 "Allow Allied Troops On Our Fronts"
