--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2280,6 +2280,19 @@
  ENG_puppet_netherlands_warning_tt:0 "§RIf we accept we will be puppeted by the British until the end of the war!"
  
  
+ soviet.428.t:0 "Lessons from Poland"
+ soviet.428.d:0 "We've achieved our goals in fighting Poland, we've taken over the Eastern part in lightning speed, our officers got the much-needed experience and valuable lessons have been learned."
+ soviet.428.a:0 "Great day for the Soviet Union"
+ soviet.429.t:0 "Genrikh Lyushkov Defects!"
+ soviet.429.d:0 "Genrikh Lyushkov has defected to Japan, reports claim he has crossed the Manchurian border and he's nowhere to be found. Vasily Blyukher was in control of the front, and there are reports of him collaborating with the Japanese spies, what do we do with this information?"
+ soviet.429.a:0 "Purge Vasily Blyukher"
+ soviet.429.b:0 "Too little evidence"
+ soviet.430.t:0 "Yezhov Trial"
+ soviet.430.d:0 "Nikolai Yezhov has been accused of conspiracies and arresting innocent citizens of the Soviet Union for years now, Beria has evidence to support this and there is a history of homosexuality, which is illegal, what do we make out of this?"
+ soviet.430.a:0 "Purge Nikolai Yezhov"
+ soviet.430.b:0 "Not enough evidence"
+ 
+ 
  japan.15.t:0 "Indian National Army"
  japan.15.d:0 "Following our defeats of the British we have a great number of Indian prisoners of war. With the right persuasion, we could use those prisoners to bolster our forces..."
  japan.15.a:0 "For great justice!"
