fixes and usa designers

--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -3588,6 +3588,9 @@
  
  NZL_torpedo_doctrine:0 "Long Range Attack Doctrine"
  cruiser_tank_manufacturer:0 "Cruiser Tank Manufacturer"
+ medium_weapons_platform_manufacturer_usa:0 "Medium Weapons Manufacturer"
+ td_doctrine_usa:0 "Tank Destroyer Board"
+ general_motors_tank:0 "General Motors"
  
  
  FRA_marquet_plan_36:0 "The Marquet Plan"
