Fixed wrong colonial_empire_lost idea being added for UK, Check for MP balance! Also made colonial empire lost ideas for ITA and UK removable by reconquest & small effects changes
Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -3740,7 +3740,10 @@
  ITA_junio_valerio_borghese:0 "Junio Valerio Borghese"
  ITA_paolo_thaon_di_revel:0 "Paolo Thaon di Revel"
  ITA_Corpo_truppe_volontarie_focus:0 "Corpo Truppe Volontarie"
- colonial_empire_lost:0 "Colonial Empire Lost"
+ colonial_empire_lost:0 "§RColonial Empire Lost§!"
+ colonial_empire_lost_desc:0 "Instead of recreating the Roman Empire, we have lost the small imperium we had. The people are loosing faith in their leaders!\n§BThis idea can be removed by reconquering Tripoli, Benghazi and Derna§!"
+ ENG_colonial_empire_lost:0 "§RLifeline of the Empire Cut§!"
+ ENG_colonial_empire_lost_desc:0 "As we have lost control of the two strategic straits of Suez and Malacca, the lifeline of the British Empire has been cut. This will significantly reduce our standing in the world as well as the will and capability to run the war economy and preserve the Empire. However Britain itself shall not fall!\n§BThis idea can be removed by reconquering Singapore, Cairo and Alexandria§!"
  ITA_german_millitary_cooperation_focus:0 "German Military Cooperation"
  ITA_german_millitary_cooperation_focus_desc:0 "We have much to learn from the German officers..."
  JAP_Kaigun_shinko_doctrine:0 "Kaigun Shinkō"
@@ -3830,7 +3833,7 @@
  desenvolvimentismo:0   "Developmentalism"
  desenvolvimentismo_desc:0 "Developmentalism is the idea that the state must be the base of industrial growth. By 1936 Brazil faced heavy economical crisis; its economy, based of non-manufactured exports, is failing due to low commodity prices. More than that, the global economic crisis and growing world tension lead to a shortage of industrialized imports. Our people are unemployed and the rich can't spend their money. This catastrophe leaves no choice to the state and its people, other than full industrialization of the country."
  desco:0 "Industrialization Effort"
- desco_desc:0 "As imports and exports kept going down the Brazilian government interfered directly into the economy, ending decades of liberalism. The first action was to stabilize the price of coffee, the main Brazilian export, by burning all produced surplus to reduce price. The second action was the creation of many state factories and companies to create jobs and reduce unemployment. The third action was a new industrial expansion, which was meant to manufacture Brazilian goods for exports, and to supply the internal market that was dependent on imports. The fourth action was to strenghen Brazilian military industry, in view of the growing world tension."
+ desco_desc:0 "As imports and exports kept going down the Brazilian government interfered directly into the economy, ending decades of liberalism. The first action was to stabilize the price of coffee, the main Brazilian export, by burning all produced surplus to reduce price. The second action was the creation of many state factories and companies to create jobs and reduce unemployment. The third action was a new industrial expansion, which was meant to manufacture Brazilian goods for exports, and to supply the internal market that was dependent on imports. The fourth action was to strengthen Brazilian military industry, in view of the growing world tension."
  urba:0 " Urbanization"
  urba_desc:0 " By this time Brazil had many, but small, urban centers. As new factories are being built and farmers become factory workers, we need to expand our cities to accommodate both the workers and new factories."
  urbaii:0 "Urbanization II"
