Manchukuo is only legit China
Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -7591,7 +7591,7 @@ MAN_get_north_china_tt:0 "Any state in the regions §YShanxi§! or §YWestern Ch
 MAN_get_north_china_bypass_tt:0 "All states in the regions §YShanxi§! and §YWestern China§! are under our controll.\n"
 MAN_get_north_china_can_do_again_tt:0 "The request for territory can be done again by decision.\n"
 is_controlled_by_china_occupier_not_MEN_tt:0 "Is fully controlled by [JAP.GetNameDef] or one of it's puppets.\n"
-MAN_low_legitimacy_level_tt:0 "§BJapans decision will impact our legitimacy§!"
+MAN_low_legitimacy_level_tt:0 "§4Japans decision will impact our legitimacy§!"
 
 MAN_empire_granted:0 "Imperial claim granted by [JAP.GetNameDef].\n"
 AST_license_production:0 "Australian License"
